<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter">Вход</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">hint</string>
    <string name="email">Email</string>
    <string name="havent_got_an_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="password">Пароль</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="enter_a_password">Введите пароль</string>
    <string name="search_courses">Search courses...</string>
    <string name="filter">Filter</string>
    <string name="filter_for_date">По дате добавления</string>
    <string name="java">Java-разработчик с нуля</string>
    <string name="backend_java">Освойте backend-разработку и программирование на Java, фреймворки...</string>
    <string name="_999">999 ₽</string>
    <string name="_22_2024">22 Мая 2024</string>
    <string name="_4_9">4.9</string>
</resources>